Html export fix white space

--- a/src/O2/Styles/Blocks.css
+++ b/src/O2/Styles/Blocks.css
@@ -135,4 +135,5 @@ body h2 {
 
 .notes-plaintext {
 	font-family: monospace;
+	white-space: pre-wrap;
 }
