--- a/src/O2/Styles/Sticky Notes.css
+++ b/src/O2/Styles/Sticky Notes.css
@@ -141,4 +141,5 @@ body h2 {
 
 .notes-plaintext {
 	font-family: monospace;
+	white-space: pre-wrap;
 }
